Update csrf based configurations & http interceptor.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ play.modules {
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
-  langs = [ "en" ]
+  langs = ["en"]
 
   # Whether the language cookie should be secure or not
   #langCookieSecure = true
@@ -245,6 +245,8 @@ play.filters {
   # or body of every form submitted, and also gets placed in the users session.
   # Play then verifies that both tokens are present and match.
   csrf {
+    cookie.name = "Csrf-Token"
+
     # Sets the cookie to be sent only over HTTPS
     #cookie.secure = true
 
